cmake_minimum_required(VERSION 3.23)
project(Chapitre_05)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(Exo_5_03)
add_subdirectory(Exo_5_05)
add_subdirectory(Exo_5_08)
add_subdirectory(Exo_5_09)
add_subdirectory(Exo_5_10)
add_subdirectory(Exo_5_11)
add_subdirectory(Exo_5_12)
add_subdirectory(Exo_5_13)
add_subdirectory(Exo_5_14)
add_subdirectory(Exo_5_19)
add_subdirectory(Exo_5_20)
add_subdirectory(Exo_5_21)
add_subdirectory(Exo_5_25)
add_subdirectory(Exo_5_26)
